bb-timeline-module/css/frontend.css
/*main heading align*/
.header-title.bb-heading-left {
    text-align: left;
}

.header-title.bb-heading-center {
    text-align: center;
}

.header-title.bb-heading-right{
    text-align: right;
}

.header-title .bb-timline-heading {
    display: inline-block;
}
/*main heading align /.*/

/*-----------------------------Common-CSS-Start---------------------------------------*/
.bb-tmtimeline-container .bb-tmtimeline {
    margin: 30px 0 0 0 !important;
    padding: 0;
    list-style: none !important;
    position: relative;
    overflow-x: hidden;
} 

.bb-tmtimeline-container .bb-tmtimeline > li {
	position: relative;
	margin: 0 !important;
}

.bb-tmtimeline-container .bb-tmicon i {
    vertical-align: middle;
    display: block;
    font-size: 26px;
    line-height: 1.6;
}

.bb-tmtimeline-container .bb-tmtime span {
    display: inline-block;
}

.tm-title-border-bottom {
    width: 100%;
    height: auto;
    line-height: 0;
}

.bb-tmlabel-border-bottom {
    display: inline-block;
    vertical-align: bottom;
}

.bb-tmtimeline-container .bb-tmtimeline > li:last-child .tm-conatiner-main:before {
    height: 96% !important;
}

.bb-tmtimeline-container .bb-tmtimeline > li .bb-tmtime.bb-tmtime-hide {
    display: none;
}

.bb-tmtimeline-container .bb-tmtimeline > li .bb-tm-image img {
    max-width: 100%;
    width: 40px;
    height: 40px;
    display: block;
}

.bb-hide-it {
    visibility: hidden;
}

/*-----------------------------Common-CSS-Ends---------------------------------------*/

/*-----------------------------Timeline-Layout-Right-Start----------------------------*/

/* Right content */
.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel {
    padding: 30px;
    color: #fff;
    font-size: 1.2em;
    font-weight: 300;
    line-height: 1.4;
    position: relative;
    margin: 0 0 30px 25%;
    border-radius: 5px;
    display: block;
}

/* The line */
.bb-timeline-right .tm-conatiner-main:before {
    content: '';
    top: 20px;
    position: absolute;
    bottom: 0;
    left: 20%;
    margin-left: 0;
    transform: translateX(-50%);
    height: 111%;
}

/* The date/time */
.bb-timeline-right .bb-tmtimeline > li .bb-tmtime {
	display: block;
	width: 25%;
	padding-right: 100px;
	position: absolute;
    text-align: right;
}

.bb-timeline-right .bb-tmtimeline > li .bb-tmtime span {
	display: inline-block;
}

/* The triangle */
.bb-timeline-right .bb-tmtimeline > li .bb-tmlabel:after {
	right: 100%;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
	border-width: 10px;
	top: 10px;
}

/* The icons */
.bb-timeline-right .bb-tmtimeline > li .bb-tmicon {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    text-align: center;
    left: 20%;
    top: 0;
    margin: 0;
    transform: translateX(-50%);
}
.bb-timeline-right .bb-tmtimeline > li .bb-tm-image {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    text-align: center;
    left: 20%;
    top: 0;
    margin: 0;
    transform: translateX(-50%);
}

.bb-timeline-right .bb-tm-title-left {
    text-align: left;
}

.bb-timeline-right .bb-tm-title-center {
    text-align: center;
}

.bb-timeline-right .bb-tm-title-right{
    text-align: right;
}
/*-----------------------------Timeline-Layout-RIGHT-End----------------------------*/

/*-----------------------------Timeline-Layout-LEFT-Start-------------------------*/

.bb-timeline-left .tm-conatiner-main:before {
    content: '';
    position: absolute;
    top: 20px;
    bottom: 0;
    right: 20%;
    margin-left: 0;
    transform: translateX(50%);
    height: 111%;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel {
    padding: 30px;
    color: #fff;
    font-size: 1.2em;
    font-weight: 300;
    line-height: 1.4;
    position: relative;
    margin: 0 25% 30px 0;
    border-radius: 5px;
    display: block;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmicon {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    text-align: center;
    right: 20%;
    top: 0;
    margin: 0;
    transform: translateX(50%);
}

.bb-timeline-left .bb-tmtimeline > li .bb-tm-image {
    width: 40px;
    height: 40px;
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 37px;
    -webkit-font-smoothing: antialiased;
    position: absolute;
    color: #fff;
    text-align: center;
    right: 20%;
    top: 0;
    margin: 0;
    transform: translateX(50%);
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmtime {
    display: block;
    width: 25%;
    padding-left: 100px;
    position: absolute;
    right: 0;
}

.bb-timeline-left .bb-tmtimeline > li .bb-tmlabel:after {
    left: 100%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-width: 10px;
    top: 10px;
}
/*-----------------------------Timeline-Layout-RIGHT-End----------------------------*/

/*-----------------------------Timeline-Layout-BOTH-Start----------------------------*/

.bb-timeline-both .bb-tmtimeline:before {
    content: '';
    position: absolute;
    top: 20px;
    bottom: 0;
    right: 0;
    left: 0;
    margin: 0 auto;
    border-radius: 0 0 10px 10px;
}
/* ... */

